# sqlitediff

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: pyright-lint.yml  python-test.yml
examples/: user_group_1.sql  user_group_2.sql
src/sqlitediff/: __init__.py  __main__.py  diff.py  escapes.py  parser.py  schema.py  table.lark
tests/: image_tags.sql  test_diff.py  test_parser.py  test_schema.py  user_group_1.sql  user_group_2.sql
