[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlitediff"
description = "A command-line program for generating SQLite schema diffs."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = [
    "lark>=1.0.0",
]

[project.scripts]
sqlitediff = "sqlitediff.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest>=7.4.3",
]

[tool.setuptools.dynamic]
version = {attr = "sqlitediff.__version__"}

[project.urls]
"Homepage" = "https://github.com/thegamecracks/sqlitediff"
"Issue Tracker" = "https://github.com/thegamecracks/sqlitediff/issues"
