[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlitediff"
description = "A command-line program for generating SQLite schema diffs."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "thegamecracks" }]
license = { text = "MIT" }
classifiers = []
dynamic = ["version"]
dependencies = [
    "lark>=1.0.0",
]

[project.scripts]
sqlitediff = "sqlitediff.__main__:main"

[project.optional-dependencies]
tests = [
    "pytest>=7.4.3",
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/thegamecracks/sqlitediff"
"Issue Tracker" = "https://github.com/thegamecracks/sqlitediff/issues"
